[refact] - refatora o clienteController